# deequ-demo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_deequ.py
